fixes an 'Illegal char <:> at index 2' problem for CS connector tests, raised on Win* environments